frontend/test/should_fail/param_007.grg
using attrib_model_001;

rule r(a:string)
{
    b:NSTRING;
    if { a == b.a; }

    replace {
    }
}
